fix gallery alignment

--- a/Content/gallery.css
+++ b/Content/gallery.css
@@ -1,9 +1,5 @@
 #lrgImage {
     margin-top: 20px;
-    margin-right: 15px;
-    width: 50%;
-    height: auto;
-    float: left;
 }
 
 #lrgImage img {
@@ -17,21 +13,21 @@
 
 #zoomButtons {
     margin-top: 10px;
-    width: 50%;
+    width: 100%;
     height: auto;
-    float: left;
 }
 #zoomButtons p{
     text-align: center;
 }
 
 #smlImages {
-    width: 100%;
-    height: auto;
+    margin-top: 20px;
+    float: left;
 }
 #smlImages ul {
     list-style-type: none;
     margin-top: 20px;
+    padding-left: 0px;
 }
 #smlImages li {
     display: inline;
@@ -42,8 +38,8 @@
 	box-shadow: 3px 3px 5px rgb(19, 6, 0);
 	border-radius: 10px;
     border-style: none;
-    width: 172px;
-    height: 96px;
+    width: 125px;
+    height: 70px;
     object-fit: cover;
 	transition: all .2s;
 }
